deploy: f344fda8b32bf0bfcc4658dfaca1ef9cbba20309

--- a/en/404.html
+++ b/en/404.html
@@ -102,12 +102,12 @@
 <li><a href=/en/project/session-with-colors-9/>Session with edible colors</a></li>
 <li><a href=/en/project/>Projects</a></li>
 <li><a href=/en/project/session-with-colors-8/>Session with edible colors</a></li>
-<li><a href=/en/project/session-with-colors-7/>Photosession with colors</a></li>
-<li><a href=/en/project/session-with-colors-6/>Photosession with edible colors in Tallinn</a></li>
-<li><a href=/en/project/session-with-colors-5/>Photosession with colors in Tallinn</a></li>
-<li><a href=/en/project/session-with-colors-4/>Photosession with colors</a></li>
+<li><a href=/en/project/session-with-colors-7/>photo shoot with colors</a></li>
+<li><a href=/en/project/session-with-colors-6/>photo shoot with edible colors in Tallinn</a></li>
+<li><a href=/en/project/session-with-colors-5/>photo shoot with colors in Tallinn</a></li>
+<li><a href=/en/project/session-with-colors-4/>photo shoot with colors</a></li>
 <li><a href=/en/project/session-with-colors-3/>Session with edible colors</a></li>
-<li><a href=/en/project/session-with-colors-2/>Photosession with edible colors in Tallinn</a></li>
+<li><a href=/en/project/session-with-colors-2/>photo shoot with edible colors in Tallinn</a></li>
 <li><a href=/en/project/session-with-colors-13/>Session with colors in Tallinn</a></li>
 </ul>
 </div>
