--- a/en/index.html
+++ b/en/index.html
@@ -180,10 +180,10 @@
 <div class="project-card project-item isotope-item js-id-colors">
 <div class=card>
 <a href=/en/project/session-with-colors-7/ class="card-image hover-overlay">
-<img src=/en/project/session-with-colors-7/featured_hu5dcb2d3646d6a90c791e86aeefec2bc4_113134_550x0_resize_q75_lanczos.jpg alt="Photosession with colors" class=img-responsive loading=lazy>
+<img src=/en/project/session-with-colors-7/featured_hu5dcb2d3646d6a90c791e86aeefec2bc4_113134_550x0_resize_q75_lanczos.jpg alt="photo shoot with colors" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/session-with-colors-7/>Photosession with colors</a></h4>
+<h4><a href=/en/project/session-with-colors-7/>photo shoot with colors</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -193,10 +193,10 @@
 <div class="project-card project-item isotope-item js-id-colors">
 <div class=card>
 <a href=/en/project/session-with-colors-6/ class="card-image hover-overlay">
-<img src=/en/project/session-with-colors-6/featured_hu3fb966ec6178fce99607bc23546d4471_94785_550x0_resize_q75_lanczos.jpg alt="Photosession with edible colors in Tallinn" class=img-responsive loading=lazy>
+<img src=/en/project/session-with-colors-6/featured_hu3fb966ec6178fce99607bc23546d4471_94785_550x0_resize_q75_lanczos.jpg alt="photo shoot with edible colors in Tallinn" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/session-with-colors-6/>Photosession with edible colors in Tallinn</a></h4>
+<h4><a href=/en/project/session-with-colors-6/>photo shoot with edible colors in Tallinn</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -206,10 +206,10 @@
 <div class="project-card project-item isotope-item js-id-colors">
 <div class=card>
 <a href=/en/project/session-with-colors-5/ class="card-image hover-overlay">
-<img src=/en/project/session-with-colors-5/featured_huda07972e9454de75f3d9ab6b3175ee94_237304_550x0_resize_q75_lanczos.jpg alt="Photosession with colors in Tallinn" class=img-responsive loading=lazy>
+<img src=/en/project/session-with-colors-5/featured_huda07972e9454de75f3d9ab6b3175ee94_237304_550x0_resize_q75_lanczos.jpg alt="photo shoot with colors in Tallinn" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/session-with-colors-5/>Photosession with colors in Tallinn</a></h4>
+<h4><a href=/en/project/session-with-colors-5/>photo shoot with colors in Tallinn</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -219,10 +219,10 @@
 <div class="project-card project-item isotope-item js-id-colors">
 <div class=card>
 <a href=/en/project/session-with-colors-4/ class="card-image hover-overlay">
-<img src=/en/project/session-with-colors-4/featured_huc624eb70c2a07794d24e476bc9c6f4ac_172221_550x0_resize_q75_lanczos.jpg alt="Photosession with colors" class=img-responsive loading=lazy>
+<img src=/en/project/session-with-colors-4/featured_huc624eb70c2a07794d24e476bc9c6f4ac_172221_550x0_resize_q75_lanczos.jpg alt="photo shoot with colors" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/session-with-colors-4/>Photosession with colors</a></h4>
+<h4><a href=/en/project/session-with-colors-4/>photo shoot with colors</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -245,10 +245,10 @@
 <div class="project-card project-item isotope-item js-id-colors">
 <div class=card>
 <a href=/en/project/session-with-colors-2/ class="card-image hover-overlay">
-<img src=/en/project/session-with-colors-2/featured_hu0aabb73a3c95673578219fdc3c22fa27_151878_550x0_resize_q75_lanczos.jpg alt="Photosession with edible colors in Tallinn" class=img-responsive loading=lazy>
+<img src=/en/project/session-with-colors-2/featured_hu0aabb73a3c95673578219fdc3c22fa27_151878_550x0_resize_q75_lanczos.jpg alt="photo shoot with edible colors in Tallinn" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/session-with-colors-2/>Photosession with edible colors in Tallinn</a></h4>
+<h4><a href=/en/project/session-with-colors-2/>photo shoot with edible colors in Tallinn</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -310,10 +310,10 @@
 <div class="project-card project-item isotope-item js-id-colors">
 <div class=card>
 <a href=/en/project/session-with-colors-1/ class="card-image hover-overlay">
-<img src=/en/project/session-with-colors-1/featured_hu7f1dd8e7e4cc7bc272b9f82aee3626b0_182866_550x0_resize_q75_lanczos.jpg alt="Photosession with edible colors" class=img-responsive loading=lazy>
+<img src=/en/project/session-with-colors-1/featured_hu7f1dd8e7e4cc7bc272b9f82aee3626b0_182866_550x0_resize_q75_lanczos.jpg alt="photo shoot with edible colors" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/session-with-colors-1/>Photosession with edible colors</a></h4>
+<h4><a href=/en/project/session-with-colors-1/>photo shoot with edible colors</a></h4>
 <div class=article-style>
 <p>babyboy</p>
 </div>
@@ -401,10 +401,10 @@
 <div class="project-card project-item isotope-item js-id-cake-smash">
 <div class=card>
 <a href=/en/project/cake-smash-session-1/ class="card-image hover-overlay">
-<img src=/en/project/cake-smash-session-1/featured_hud3ff0d9d3611a1bd7a0414bfd93697be_72938_550x0_resize_q75_lanczos.jpg alt="Cake smash photosession" class=img-responsive loading=lazy>
+<img src=/en/project/cake-smash-session-1/featured_hud3ff0d9d3611a1bd7a0414bfd93697be_72938_550x0_resize_q75_lanczos.jpg alt="Cake smash photo shoot" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/cake-smash-session-1/>Cake smash photosession</a></h4>
+<h4><a href=/en/project/cake-smash-session-1/>Cake smash photo shoot</a></h4>
 <div class=article-style>
 <p>babyboy</p>
 </div>
@@ -455,10 +455,10 @@
 <div class="project-card project-item isotope-item js-id-baby">
 <div class=card>
 <a href=/en/project/baby-photosession-6/ class="card-image hover-overlay">
-<img src=/en/project/baby-photosession-6/featured_hua1e86248e0790e3ab7b2e8c306dad99c_88038_550x0_resize_q75_lanczos.jpg alt="Baby photosession in Tallinn" class=img-responsive loading=lazy>
+<img src=/en/project/baby-photosession-6/featured_hua1e86248e0790e3ab7b2e8c306dad99c_88038_550x0_resize_q75_lanczos.jpg alt="Baby photo shoot in Tallinn" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/baby-photosession-6/>Baby photosession in Tallinn</a></h4>
+<h4><a href=/en/project/baby-photosession-6/>Baby photo shoot in Tallinn</a></h4>
 <div class=article-style>
 <p>babyboy</p>
 </div>
@@ -494,10 +494,10 @@
 <div class="project-card project-item isotope-item js-id-baby">
 <div class=card>
 <a href=/en/project/baby-photosession-3/ class="card-image hover-overlay">
-<img src=/en/project/baby-photosession-3/featured_hu95f38f8930c413f6bbd09cff4f95070e_190812_550x0_resize_q75_lanczos.jpg alt="Baby photosession" class=img-responsive loading=lazy>
+<img src=/en/project/baby-photosession-3/featured_hu95f38f8930c413f6bbd09cff4f95070e_190812_550x0_resize_q75_lanczos.jpg alt="Baby photo shoot" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/baby-photosession-3/>Baby photosession</a></h4>
+<h4><a href=/en/project/baby-photosession-3/>Baby photo shoot</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -507,10 +507,10 @@
 <div class="project-card project-item isotope-item js-id-baby">
 <div class=card>
 <a href=/en/project/baby-photosession-2/ class="card-image hover-overlay">
-<img src=/en/project/baby-photosession-2/featured_huf22e39deb05da296093bd648b37f28e4_25880_550x0_resize_q75_lanczos.jpg alt="Baby photosession" class=img-responsive loading=lazy>
+<img src=/en/project/baby-photosession-2/featured_huf22e39deb05da296093bd648b37f28e4_25880_550x0_resize_q75_lanczos.jpg alt="Baby photo shoot" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/baby-photosession-2/>Baby photosession</a></h4>
+<h4><a href=/en/project/baby-photosession-2/>Baby photo shoot</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -598,10 +598,10 @@
 <div class="project-card project-item isotope-item js-id-baby">
 <div class=card>
 <a href=/en/project/baby-photosession-13/ class="card-image hover-overlay">
-<img src=/en/project/baby-photosession-13/featured_hu19274bac340d1a5f530888452d8fdc16_302903_550x0_resize_q75_lanczos.jpg alt="Baby photosession" class=img-responsive loading=lazy>
+<img src=/en/project/baby-photosession-13/featured_hu19274bac340d1a5f530888452d8fdc16_302903_550x0_resize_q75_lanczos.jpg alt="Baby photo shoot" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/baby-photosession-13/>Baby photosession</a></h4>
+<h4><a href=/en/project/baby-photosession-13/>Baby photo shoot</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -611,10 +611,10 @@
 <div class="project-card project-item isotope-item js-id-baby">
 <div class=card>
 <a href=/en/project/baby-photosession-12/ class="card-image hover-overlay">
-<img src=/en/project/baby-photosession-12/featured_hue6b4b1536d3e3389e7cb4905e558ec07_82454_550x0_resize_q75_lanczos.jpg alt="Baby photosession in the studio of Tallinn" class=img-responsive loading=lazy>
+<img src=/en/project/baby-photosession-12/featured_hue6b4b1536d3e3389e7cb4905e558ec07_82454_550x0_resize_q75_lanczos.jpg alt="Baby photo shoot in the studio of Tallinn" class=img-responsive loading=lazy>
 </a>
 <div class=card-text>
-<h4><a href=/en/project/baby-photosession-12/>Baby photosession in the studio of Tallinn</a></h4>
+<h4><a href=/en/project/baby-photosession-12/>Baby photo shoot in the studio of Tallinn</a></h4>
 <div class=article-style>
 <p>babygirl</p>
 </div>
@@ -712,7 +712,7 @@ Viktoria Iljin</span>
 </div>
 <span class=article-date>
 Last updated on
-Oct 21, 2021
+Jan 29, 2022
 </span>
 <span class=middot-divider></span>
 <span class=article-categories>
@@ -740,17 +740,17 @@ Viktoria Iljin</span>
 </div>
 <span class=article-date>
 Last updated on
-Oct 21, 2021
+Jan 29, 2022
 </span>
 <span class=middot-divider></span>
 <span class=article-categories>
 <i class="fas fa-folder mr-1"></i><a href=/en/category/babies/>babies</a></span>
 </div>
 <a href=/en/post/baby-photosession/>
-<div class=img-hover-zoom><img src=/en/post/baby-photosession/featured_hu8b21519ae0fd59ebbe31581376b29eb4_486269_808x455_fill_q75_lanczos_smart1.jpg class=article-banner alt="Baby photosession" loading=lazy></div>
+<div class=img-hover-zoom><img src=/en/post/baby-photosession/featured_hu8b21519ae0fd59ebbe31581376b29eb4_486269_808x455_fill_q75_lanczos_smart1.jpg class=article-banner alt="Baby photo shoot" loading=lazy></div>
 </a>
 <div class="section-subheading article-title mb-1 mt-3">
-<a href=/en/post/baby-photosession/>Baby photosession</a>
+<a href=/en/post/baby-photosession/>Baby photo shoot</a>
 </div>
 <a href=/en/post/baby-photosession/ class=summary-link>
 <div class=article-style>
@@ -767,17 +767,17 @@ Oct 21, 2021
 Viktoria Iljin</span>
 </div>
 <span class=article-date>
-Apr 30, 2021
+Jan 29, 2022
 </span>
 <span class=middot-divider></span>
 <span class=article-categories>
 <i class="fas fa-folder mr-1"></i><a href=/en/category/colors/>colors</a></span>
 </div>
 <a href=/en/post/photosession-with-ediable-colors-in-tallinn/>
-<div class=img-hover-zoom><img src=/en/post/photosession-with-ediable-colors-in-tallinn/featured_hu83bb623cbd40008bcd9198e2df69ba4b_156280_808x455_fill_q75_lanczos_smart1.jpg class=article-banner alt="Baby photosession with edible colors" loading=lazy></div>
+<div class=img-hover-zoom><img src=/en/post/photosession-with-ediable-colors-in-tallinn/featured_hu83bb623cbd40008bcd9198e2df69ba4b_156280_808x455_fill_q75_lanczos_smart1.jpg class=article-banner alt="Baby photo shoot with edible colors" loading=lazy></div>
 </a>
 <div class="section-subheading article-title mb-1 mt-3">
-<a href=/en/post/photosession-with-ediable-colors-in-tallinn/>Baby photosession with edible colors</a>
+<a href=/en/post/photosession-with-ediable-colors-in-tallinn/>Baby photo shoot with edible colors</a>
 </div>
 <a href=/en/post/photosession-with-ediable-colors-in-tallinn/ class=summary-link>
 <div class=article-style>
@@ -809,7 +809,7 @@ See certificate
 </div>
 </div>
 <div class="card experience course">
-<div class=card-body><a href=https://www.lastefoto.ee/en/karina-kiel/ target=_blank rel=noopener><div class="section-subheading card-title exp-title text-muted my-0">Staged photosession and art post-production</div></a><div class="card-subtitle my-0 article-metadata"><a href=https://www.lastefoto.ee/en/karina-kiel/ target=_blank rel=noopener>Karina Kiel</a><span class=middot-divider></span>
+<div class=card-body><a href=https://www.lastefoto.ee/en/karina-kiel/ target=_blank rel=noopener><div class="section-subheading card-title exp-title text-muted my-0">Staged photo shoot and art post-production</div></a><div class="card-subtitle my-0 article-metadata"><a href=https://www.lastefoto.ee/en/karina-kiel/ target=_blank rel=noopener>Karina Kiel</a><span class=middot-divider></span>
 2017-12-12
 </div>
 <div class=card-text>Participation at Art Photography workshop</div>
