deploy: 8b9ac0664b4468f55792de600ff4d406160314cf

--- a/en/index.html
+++ b/en/index.html
@@ -700,33 +700,23 @@ We have a wide range of props and backdrops available, so you can create a truly
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-female"></i></div>
-<div class=section-subheading>PREGNANCY S 160€</div>
-<p>1-2 set ups, 10 digital photos, assistance in posing, 1 hour of shooting in the studio.</p>
+<div class=section-subheading>BABY S 110€</div>
+<p>baby photo shoot on a posing pillow and in props, 10 processed digital and printed photos 10x15cm, shooting for 1 hour in the studio, processing of additional photos 5 €/photo.</p>
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-grin-hearts"></i></div>
-<div class=section-subheading>PREGNANCY M 235€</div>
-<p>2-3 set ups, silhouette on black and white backgrounds, 15 digital photos, assistance in posing, 2 hours of shooting in the studio.</p>
+<div class=section-subheading>BABY M 140€</div>
+<p>baby photo shoot on a posing pillow and in props, general family photos and separate pictures with mom-dad and brother-sister, 15 processed digital and printed photos 10x15cm, shooting for 1 hour in the studio, processing of additional photos 5 €/photo.</p>
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-kiss-wink-heart"></i></div>
-<div class=section-subheading>PREGNANCY L 345€</div>
-<p>2-3 set ups, silhouette on black and white backgrounds and silhouette on a colored background (if desired), assistance in posing, 20 digital photos, makeup and curls (for 1 person), 2 hours of shooting in the studio.</p>
+<div class=section-subheading>CAKE SMASH 170€</div>
+<p>20 processed digital photos, cake, balloons (15pcs), 1 hour of shooting in the studio, processing of additional photos 5 €/photo.</p>
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-baby"></i></div>
-<div class=section-subheading>NEWBORN S 185€</div>
-<p>photo session of a newborn on a posing pillow (beanbag), 7 digital photos, shooting for 2 hours in the studio, printed photos 10x15cm, USB drive with all retouched photos in individually designed packaging, retouching of additional photos 10 € / photo</p>
-</div>
-<div class="col-12 col-sm-4">
-<div class=featurette-icon><i class="fas fa-child"></i></div>
-<div class=section-subheading>NEWBORN M 290€</div>
-<p>photo session of a newborn on a posing pillow (beanbag) and in the props, 17 digital photos, family shots and photos with siblings, shooting for 2-3 hours in the studio, printed photos 10x15cm, USB drive with all retouched photos in individually designed packaging, retouching of additional photos 9 € / photo</p>
-</div>
-<div class="col-12 col-sm-4">
-<div class=featurette-icon><i class="fas fa-birthday-cake"></i></div>
-<div class=section-subheading>NEWBORN L 410€</div>
-<p>photo session of a newborn on a posing pillow (beanbag) and in the props, 30 digital photos, family shots and photos with siblings, shooting for 2-3 hours in the studio, printed photos 10x15cm, photobook 20 x 20 cm, USB drive with all retouched photos in individually designed packaging, retouching of additional photos 8 € / photo</p>
+<div class=section-subheading>COLORS 120€</div>
+<p>10 processed digital photos, edible paints, canvas with baby’s masterpiece, 40 minutes of shooting in the stuudio, processing of additional photos 5 €/photo.</p>
 </div>
 </div>
 </div>
