--- a/ru/index.html
+++ b/ru/index.html
@@ -700,33 +700,23 @@
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-female"></i></div>
-<div class=section-subheading>БЕРЕМЕННОСТЬ S 160€</div>
-<p>1-2 образа, 10 обработанных диги-фотографий, помощь в позировании, фотосессия в течение 1 часа в студии.</p>
+<div class=section-subheading>МАЛЫШ S 110€</div>
+<p>фотосессия малыша на позировочной подушке и в реквизите, 10 обработанных и напечатанных фотографий 10x15cm, съёмка в течение 1 часа в студии, обработка дополнительных фотографий 5€/фотография.</p>
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-grin-hearts"></i></div>
-<div class=section-subheading>БЕРЕМЕННОСТЬ M 235€</div>
-<p>2-3 образа, силуэт на черном и белом фонах, 15 обработанных диги-фотографий, помощь в позировании, фотосессия в течение 2 часов в студии.</p>
+<div class=section-subheading>МАЛЫШ M 140€</div>
+<p>фотосессия малыша на позировочной подушке и в реквизите, общие семейные фотографиии отдельные кадры с мамой-папой и братом-сестрой, 15 обработанных и напечатанных фотографий 10x15cm, съёмка в течение 1 часа в студии, обработка дополнительных фотографий 5€/фотография.</p>
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-kiss-wink-heart"></i></div>
-<div class=section-subheading>БЕРЕМЕННОСТЬ M 345€</div>
-<p>2-3 образа, силуэт на черном, белом и цветном фонах, 20 обработанных диги-фотографий, помощь в позировании, макияж и локоны (для 1 человека), фотосессия в течение 2 часов в студии.</p>
+<div class=section-subheading>CAKE SMASH 170€</div>
+<p>20 обработанных диги-фотографий, торт, воздушные шары (15 шт), съёмка в течение 1 часа в студии, обработка дополнительных фотографий 5€/фотография.</p>
 </div>
 <div class="col-12 col-sm-4">
 <div class=featurette-icon><i class="fas fa-baby"></i></div>
-<div class=section-subheading>НОВОРОЖДЁННЫЙ S 185€</div>
-<p>фотосессия новорожденного на позировочной подушке (beanbag), 7 обработанных диги-фотографий, съёмка в течение 2 часов в студии, напечатанные фотографии размером 10х15см, USB-накопитель со всеми обработанными фотографиями в индивидуально разработанной упаковке, обработка дополнительных фотографий 10€ / фотография</p>
-</div>
-<div class="col-12 col-sm-4">
-<div class=featurette-icon><i class="fas fa-child"></i></div>
-<div class=section-subheading>НОВОРОЖДЁННЫЙ M 290€</div>
-<p>фотосессия новорожденного на позировочной подушке (beanbag) или в реквизите, 17 обработанных диги-фотографий, общие семейные кадры и фотографии с братьями-сестрами, съёмка в течение 2-3 часов в студии, напечатанные фотографии размером 10х15см, USB-накопитель со всеми обработанными фотографиями в индивидуально разработанной упаковке, обработка дополнительных фотографий 9€ / фотография</p>
-</div>
-<div class="col-12 col-sm-4">
-<div class=featurette-icon><i class="fas fa-birthday-cake"></i></div>
-<div class=section-subheading>НОВОРОЖДЁННЫЙ L 410€</div>
-<p>фотосессия новорожденного на позировочной подушке (beanbag) или в реквизите, 30 обработанных диги-фотографий, общие семейные кадры и фотографии с братьями-сестрами, съёмка в течение 2-3 часов в студии, напечатанные фотографии размером 10х15см, фотокнига 20 х 20 cm, USB-накопитель со всеми обработанными фотографиями в индивидуально разработанной упаковке, обработка дополнительных фотографий 8€ / фотография</p>
+<div class=section-subheading>КРАСКИ 120€</div>
+<p>10 обработанных диги-фотографий, съедобные краски, холст с шедевром малыша, съёмка в течение 40 минут в студии, обработка дополнительных фотографий 5€/фотография.</p>
 </div>
 </div>
 </div>
