--- a/ru/index.html
+++ b/ru/index.html
@@ -30,7 +30,7 @@ May 12, 2021</span>
 <span id=person-email><a href=mailto:lastefoto@gmail.com>lastefoto@gmail.com</a></span></li><li><i class="fa-li fas fa-phone fa-2x" aria-hidden=true></i>
 <span id=person-telephone><a href=tel:37255599546>37255599546</a></span></li><li><i class="fa-li fas fa-map-marker fa-2x" aria-hidden=true></i>
 <span id=person-address>Peterburi 46, Tallinn, Harjumaa 11415</span></li><li><i class="fa-li fas fa-compass fa-2x" aria-hidden=true></i>
-<span>Sisenege büroohoonesse ja minge 5. korrusele tuppa 513.</span></li><li><i class="fa-li fab fa-twitter fa-2x" aria-hidden=true></i>
+<span>Susi büroohoone, 5. korrus, tuba 513</span></li><li><i class="fa-li fab fa-twitter fa-2x" aria-hidden=true></i>
 <a href=https://twitter.com/lastefoto target=_blank rel=noopener>Twitter</a></li><li><i class="fa-li fab fa-instagram fa-2x" aria-hidden=true></i>
 <a href=https://www.instagram.com/viktoriailjin/ target=_blank rel=noopener>Instagram</a></li><li><i class="fa-li fab fa-facebook fa-2x" aria-hidden=true></i>
 <a href=https://www.facebook.com/LasteFoto/ target=_blank rel=noopener>Facebook</a></li></ul></div></div></div></section></div><div class=page-footer><div class=container><footer class=site-footer><p class=powered-by><a rel=nofollow href=/ru/privacy/>Политика конфиденциальности</a>
